aws/frontend-lab-app/frontend-oc-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-lab-app
  namespace: murillo-labs-openshift
spec:
  selector:
    app: frontend-lab-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
