aws/frontend-lab-app/frontend-oc-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-lab-app
  namespace: murillo-labs-openshift
spec:
  path: /
  to:
    kind: Service
    name: frontend-lab-app
  port:
    targetPort: 80
